# skillful_nowcasting

./: .all-contributorsrc  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  import_deepmind_weights.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: linters.yaml  main.yaml  release.yaml  workflows.yaml
dgmr/: __init__.py  common.py  dgmr.py  discriminators.py  generators.py  hub.py  losses.py
dgmr/layers/: Attention.py  ConvGRU.py  CoordConv.py  __init__.py  attention.py  utils.py
nowcasting_gan/: __init__.py  common.py  discriminators.py  generators.py  losses.py  nowcasting_gan.py
nowcasting_gan/layers/: Attention.py  ConvGRU.py  __init__.py  utils.py
pseudocode/: LICENSE  README.md  discriminator.txt  generator.txt  layers.txt  train.txt
skillful_nowcasting/: common.py  dgmr.py  discriminators.py  generators.py  hub.py
skillful_nowcasting/layers/: Attention.py  ConvGRU.py  utils.py
tests/: requirements.txt  test_losses.py  test_model.py
tests/lightning_logs/version_0/: events.out.tfevents.1655536486.ocf.4177843.0
tests/lightning_logs/version_1/: events.out.tfevents.1655536602.ocf.4179322.0
tests/lightning_logs/version_2/: events.out.tfevents.1655536666.ocf.4180026.0  hparams.yaml
tests/lightning_logs/version_3/: events.out.tfevents.1655536730.ocf.4180814.0
tests/lightning_logs/version_4/: events.out.tfevents.1655536810.ocf.4181676.0
tests/lightning_logs/version_5/: events.out.tfevents.1655536886.ocf.4182513.0
tests/lightning_logs/version_6/: events.out.tfevents.1655536960.ocf.4183415.0
tests/lightning_logs/version_7/: events.out.tfevents.1655537037.ocf.4184301.0
train/: run.py
